# platformer

./: .gitignore  README.md
src/: CMakeLists.txt  accents.cpp  accents.hpp  acid-anim-layer.cpp  acid-anim-layer.hpp  acid-spout-anim-layer.cpp  acid-spout-anim-layer.hpp  anim-layer-acid-spout.hpp  anim-layer-acid.cpp  anim-layer-acid.hpp  anim-layer-bomb.cpp  anim-layer-bomb.hpp  anim-layer-flaming-skull.cpp  anim-layer-flaming-skull.hpp  anim-layer-ghost-bottle.cpp  anim-layer-ghost-bottle.hpp  anim-layer-lightning.cpp  anim-layer-lightning.hpp  anim-layer-trap.hpp  anim-layer-water.cpp  avatar-spell-anims.cpp  avatar-spell-anims.hpp  avatar-textures.cpp  avatar-textures.hpp  avatar.cpp  avatar.hpp  background-images.cpp  background-images.hpp  check-macros.hpp  color-range.hpp  context.hpp  coordinator.cpp  coordinator.hpp  custom-types.hpp  dino.cpp  dino.hpp  ent.cpp  ent.hpp  filesystem-util.hpp  flaming-skull-anim-layer.cpp  (+154 more)
src/avatar/: CMakeLists.txt  avatar-spell-anims.cpp  avatar-spell-anims.hpp  avatar-textures.cpp  avatar-textures.hpp  avatar.cpp  avatar.hpp  spells-anim.cpp  spells-anim.hpp
src/bramblefore/: CMakeLists.txt  main.cpp  settings.hpp
src/map/: CMakeLists.txt  accents.cpp  accents.hpp  anim-layer-acid-spout.cpp  anim-layer-acid-spout.hpp  anim-layer-acid.cpp  anim-layer-acid.hpp  anim-layer-bomb.cpp  anim-layer-bomb.hpp  anim-layer-chest.cpp  anim-layer-chest.hpp  anim-layer-dart-trap.cpp  anim-layer-dart-trap.hpp  anim-layer-falling-rock.cpp  anim-layer-falling-rock.hpp  anim-layer-firewall.cpp  anim-layer-firewall.hpp  anim-layer-flame-trap.cpp  anim-layer-flame-trap.hpp  anim-layer-flaming-skull.cpp  anim-layer-flaming-skull.hpp  anim-layer-ghost-bottle.cpp  anim-layer-ghost-bottle.hpp  anim-layer-lava-drip.cpp  anim-layer-lava-drip.hpp  anim-layer-lava.cpp  anim-layer-lava.hpp  anim-layer-lightning.cpp  anim-layer-lightning.hpp  anim-layer-mimic.cpp  anim-layer-mimic.hpp  anim-layer-plant-puke.cpp  anim-layer-plant-puke.hpp  anim-layer-plant-trap.cpp  anim-layer-plant-trap.hpp  anim-layer-saw.cpp  anim-layer-saw.hpp  anim-layer-spike-trap.cpp  anim-layer-spike-trap.hpp  anim-layer-spiked-ball.cpp  (+20 more)
src/monster/: CMakeLists.txt  imonster.hpp  monster-baby-dragon.cpp  monster-baby-dragon.hpp  monster-bear.cpp  monster-bear.hpp  monster-big-knight.cpp  monster-big-knight.hpp  monster-bone-dragon.cpp  monster-bone-dragon.hpp  monster-boss-knight.cpp  monster-boss-knight.hpp  monster-boss-tribal.cpp  monster-boss-tribal.hpp  monster-boss-wiard.cpp  monster-boss-wizard.hpp  monster-demon.cpp  monster-demon.hpp  monster-dino.cpp  monster-dino.hpp  monster-djinn.cpp  monster-djinn.hpp  monster-dragon.cpp  monster-dragon.hpp  monster-dwarf.cpp  monster-dwarf.hpp  monster-ent.cpp  monster-ent.hpp  monster-fire-imp.cpp  monster-fire-imp.hpp  monster-fire-knight.cpp  monster-fire-knight.hpp  monster-ghost.cpp  monster-ghost.hpp  monster-goblin.cpp  monster-goblin.hpp  monster-hound.cpp  monster-hound.hpp  monster-imp.cpp  monster-imp.hpp  (+30 more)
src/player/: CMakeLists.txt  custom-types.hpp  player-info-display.cpp  player-info-display.hpp  player-info.cpp  player-info.hpp
src/state/: CMakeLists.txt  state-char-select.cpp  state-char-select.hpp  state-credits.cpp  state-credits.hpp  state-level-complete.cpp  state-level-complete.hpp  state-level-death.cpp  state-level-death.hpp  state-manager.cpp  state-manager.hpp  state-play.cpp  state-play.hpp  state-splash.cpp  state-splash.hpp  states.hpp
src/subsystem/: CMakeLists.txt  background-images.cpp  background-images.hpp  blood-splat.cpp  blood-splat.hpp  context.hpp  coordinator.cpp  coordinator.hpp  font.cpp  (+20 more)
(+51 files in other folders)
